--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "spectr-messenger",
-  "version": "3.0.0",
-  "description": "Мессенджер с Google авторизацией",
+  "name": "spectr-social",
+  "version": "1.0.0",
+  "description": "Полноценная социальная сеть с чатами",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
+    "sqlite3": "^5.1.6",
+    "sqlite": "^5.1.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8"
   }
 }
