--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "spectr-social",
-  "version": "4.0.0",
-  "description": "Социальная сеть с чатами, контактами и группами",
+  "name": "spectr-messenger",
+  "version": "2.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -9,15 +8,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
-    "socket.io": "^4.5.4",
-    "multer": "^1.4.5-lts.1",
+    "@supabase/supabase-js": "^2.39.0",
     "nodemailer": "^6.9.7",
-    "fs": "0.0.1-security",
-    "path": "^0.12.7"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "socket.io": "^4.5.4",
+    "bcrypt": "^5.1.1"
   }
 }
