--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "spectr-messenger",
-  "version": "2.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "name": "spectr-pro",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {"start": "node server.js"},
   "dependencies": {
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "@supabase/supabase-js": "^2.39.0",
-    "nodemailer": "^6.9.7",
     "socket.io": "^4.5.4",
-    "bcrypt": "^5.1.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "express-session": "^1.17.3"
   }
 }
